添加路由和跳转

--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
       height: 100%;
     }
 
+    a {
+      text-decoration: none;
+      background-color: transparent;
+    }
+
     @font-face {
       font-family: 'iconfont';
       /* project id 596540 */
-      src: url('//at.alicdn.com/t/font_596540_lfdpvghw03r9hpvi.eot');
-      src: url('//at.alicdn.com/t/font_596540_lfdpvghw03r9hpvi.eot?#iefix') format('embedded-opentype'),
-      url('//at.alicdn.com/t/font_596540_lfdpvghw03r9hpvi.woff') format('woff'),
-      url('//at.alicdn.com/t/font_596540_lfdpvghw03r9hpvi.ttf') format('truetype'),
-      url('//at.alicdn.com/t/font_596540_lfdpvghw03r9hpvi.svg#iconfont') format('svg');
+      src: url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.eot');
+      src: url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.eot?#iefix') format('embedded-opentype'),
+      url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.woff') format('woff'),
+      url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.ttf') format('truetype'),
+      url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.svg#iconfont') format('svg');
     }
 
     .iconfont {
@@ -33,7 +38,14 @@
       -webkit-text-stroke-width: 0.2px;
       -moz-osx-font-smoothing: grayscale;
     }
+
+    .iconfont+span.mint-cell-text {
+      vertical-align: top;
+      line-height: 23px;
+      display: inline-block;
+    }
   </style>
+  <script type="text/javascript" src="static/js/api.js"></script>
 </head>
 
 <body>
