--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       height: 100%;
     }
 
+    * {
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
+
     a {
       text-decoration: none;
       background-color: transparent;
