--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>myvue</title>
+  <link rel="stylesheet" href="static/css/vue2-animate.css">
   <style>
     html,
     body {
