--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     @font-face {
       font-family: 'iconfont';
       /* project id 596540 */
-      src: url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.eot');
-      src: url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.eot?#iefix') format('embedded-opentype'),
-      url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.woff') format('woff'),
-      url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.ttf') format('truetype'),
-      url('//at.alicdn.com/t/font_596540_ih64uxt7ou323xr.svg#iconfont') format('svg');
+      src: url('//at.alicdn.com/t/font_596540_4p5vecno0gm0a4i.eot');
+      src: url('//at.alicdn.com/t/font_596540_4p5vecno0gm0a4i.eot?#iefix') format('embedded-opentype'),
+      url('//at.alicdn.com/t/font_596540_4p5vecno0gm0a4i.woff') format('woff'),
+      url('//at.alicdn.com/t/font_596540_4p5vecno0gm0a4i.ttf') format('truetype'),
+      url('//at.alicdn.com/t/font_596540_4p5vecno0gm0a4i.svg#iconfont') format('svg');
     }
 
     .iconfont {
@@ -51,6 +51,11 @@
     }
   </style>
   <script type="text/javascript" src="static/js/api.js"></script>
+  <script type="text/javascript">
+    window.onload = function() {
+      document.documentElement.style.fontSize = 20 * document.documentElement.clientWidth / 320 + 'px';
+    };
+  </script>
 </head>
 
 <body>
